Ignore build and bin folders

--- a/build.xml
+++ b/build.xml
@@ -2,15 +2,15 @@
 <!DOCTYPE project [
 <!ENTITY baseBuild SYSTEM "../org.homeunix.thecave.build/baseBuild.xml.inc">
 ]>
-<project name="JSP_Gallery" default="jar-taglib" basedir=".">
+<project name="JSP Cache" default="jar" basedir=".">
 
 	<!-- Version number and other build-specific properties -->
 	<property file="etc/build.properties"/>
 
 	<!-- Set up all the project specific properties -->
-	<property name="PROJECT_NAME" value="Jsp Gallery"/>
-	<property name="PROJECT_SHORT_NAME" value="moss-jsp-gallery"/>
-	<property name="PROJECT_DESCRIPTION" value="Easily create photo galleries in JSP.  Uses Lightbox 2 to display images."/>
+	<property name="PROJECT_NAME" value="JSP Cache"/>
+	<property name="PROJECT_SHORT_NAME" value="moss-jsp-cache"/>
+	<property name="PROJECT_DESCRIPTION" value="JSP Filter to facilitate caching on a per-URI level.  Caches to both disk and memory."/>
 	<property name="PROJECT_COPYRIGHT" value="Copyright Wyatt Olson"/>
 
     <path id="classpath">
