--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,6 +13,10 @@
 	<filter>
 		<filter-name>CacheFilter</filter-name>
 		<filter-class>org.homeunix.thecave.moss.jsp.cache.CacheFilter</filter-class>
+		<init-param>
+			<param-name>log-level</param-name>
+			<param-value>FINER</param-value>
+		</init-param>
 	</filter>
 
 	<filter-mapping>
