--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.homeunix.thecave.moss.jsp.cache</name>
+	<name>ca.digitalcave.moss.jsp.cache</name>
 	<comment></comment>
 	<projects>
 	</projects>
